--- a/styles.css
+++ b/styles.css
@@ -72,3 +72,26 @@ header div h4 {
   padding: 40px 80px;
   font-weight: lighter;
 }
+header div a {
+  display: block;
+  margin: auto;
+  margin-top: 40px;
+  margin: 40px;
+  margin-left: auto;
+  margin-right: auto;
+  width: 45%;
+  height: 65%;
+  font-size: 25px;
+  font-weight: bold;
+  background-color: #3f516c;
+  color: white;
+  padding: 20px 20px;
+  border-radius: 10px;
+}
+header div h5 {
+  color: #3f516c;
+  font-family: "Roboto", sans-serif, sans-serif;
+  font-size: 45px;
+  padding: 40px 80px;
+  font-weight: lighter;
+}
