--- a/styles.scss
+++ b/styles.scss
@@ -60,6 +60,15 @@ header {
             font-size: 50px;
             padding: 40px 80px;
         }
+
+        img {
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+            margin-top: 40px;
+            margin-bottom: 40px;
+            width: 55%;
+        }
         
         h2 {
             color: $color-primary;
@@ -85,24 +94,6 @@ header {
             font-weight: lighter;
         }
 
-        a {
-            display: block;
-            margin: auto;
-            margin-top: 40px;
-            margin: 40px;
-            margin-left: auto;
-            margin-right: auto;
-            width:45%;
-            height:65%;
-            font-size:25px;
-            font-weight: bold;
-            background-color: $color-primary;
-            color: white;
-            padding: 20px 20px;
-            border-radius: 10px;
-            
-        }
-
         h5 {
             color: $color-primary;
             font-family: $font-body, sans-serif;
@@ -115,7 +106,25 @@ header {
 }
 
 
+.button {
+    display: block;
+            margin: auto;
+            margin-top: 40px;
+            margin: 40px;
+            margin-left: auto;
+            margin-right: auto;
+            width:45%;
+            height:65%;
+            font-size:25px;
+            font-weight: bold;
+            text-align:center;
+            background-color: $color-primary;
+            color: white;
+            padding: 20px 20px;
+            border-radius: 10px;
+
+}
+
 
 //add penguin image to dada logo
-//make launch image bigger
-//continue from get dadvice button
+
