--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@ a:visited {
   text-decoration: none;
 }
 
-nav {
+#top-bar {
   height: 20vh;
   padding: 0 40px;
   display: flex;
@@ -104,4 +104,20 @@ header div h5 {
   color: white;
   padding: 20px 20px;
   border-radius: 10px;
+}
+
+.bottom-bar {
+  width: 100%;
+  height: 50%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #fffcdd;
+  margin-top: 120px;
+}
+.bottom-bar div {
+  padding: 30px 0px;
+  font-size: 30px;
+  font-weight: bold;
+  background-color: #fffcdd;
 }
