--- a/styles.scss
+++ b/styles.scss
@@ -21,7 +21,7 @@ a:visited {
   text-decoration: none;
 }
 
-nav {
+#top-bar {
     height:20vh;
     padding: 0 40px;
     display: flex;
@@ -107,24 +107,49 @@ header {
 
 
 .button {
-    display: block;
-            margin: auto;
-            margin-top: 40px;
-            margin: 40px;
-            margin-left: auto;
-            margin-right: auto;
-            width:45%;
-            height:65%;
-            font-size:25px;
-            font-weight: bold;
-            text-align:center;
-            background-color: $color-primary;
-            color: white;
-            padding: 20px 20px;
-            border-radius: 10px;
+        display: block;
+        margin: auto;
+        margin-top: 40px;
+        margin: 40px;
+        margin-left: auto;
+        margin-right: auto;
+        width:45%;
+        height:65%;
+        font-size:25px;
+        font-weight: bold;
+        text-align:center;
+        background-color: $color-primary;
+        color: white;
+        padding: 20px 20px;
+        border-radius: 10px;
 
 }
 
+.bottom-bar {
+    width:100%;
+    height:50%;    
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #fffcdd;
+    margin-top:120px;
+    
+    
+    
+    div {
+        padding: 30px 0px;
+        font-size:30px;
+        font-weight: bold;
+        background-color: #fffcdd;
+        
+        
+    }
+    
+}
+
+
 
 //add penguin image to dada logo
+//style main content
+//bottom nav bar remove highlight
 
