--- a/styles.css
+++ b/styles.css
@@ -121,3 +121,12 @@ header div h5 {
   font-weight: bold;
   background-color: #fffcdd;
 }
+
+.content {
+  width: 100%;
+  height: 50%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
