--- a/styles.scss
+++ b/styles.scss
@@ -149,6 +149,19 @@ header {
 
 
 
+.content {
+    width:100%;
+    height:50%;    
+    display:flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    
+    
+     
+}
+
+
 //add penguin image to dada logo
 //style main content
 //bottom nav bar remove highlight
