--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,7 @@
   padding: 0;
   box-sizing: border-box;
   font-family: "Roboto", sans-serif;
+  line-height: 1.8;
   color: #3f516c;
   background-color: #fefdf8;
 }
@@ -90,9 +91,8 @@ header div h5 {
 
 .button {
   display: block;
-  margin: auto;
   margin-top: 40px;
-  margin: 40px;
+  margin-bottom: 40px;
   margin-left: auto;
   margin-right: auto;
   width: 45%;
@@ -104,6 +104,25 @@ header div h5 {
   color: white;
   padding: 20px 20px;
   border-radius: 10px;
+}
+
+.content {
+  width: 100%;
+  height: 50%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
+  margin: auto;
+}
+.content div {
+  font-size: 30px;
+  max-width: 600px;
+  padding-left: 40px;
+  padding-right: 40px;
+}
+.content img {
+  width: 270px;
 }
 
 .bottom-bar {
@@ -120,13 +139,4 @@ header div h5 {
   font-size: 30px;
   font-weight: bold;
   background-color: #fffcdd;
-}
-
-.content {
-  width: 100%;
-  height: 50%;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-between;
 }
