--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,9 @@
   font-family: "Roboto", sans-serif;
   line-height: 1.8;
   color: #3f516c;
+}
+
+body {
   background-color: #fefdf8;
 }
 
@@ -117,22 +120,22 @@ header div h5 {
 }
 .content div {
   font-size: 30px;
-  max-width: 600px;
+  max-width: 500px;
   padding-left: 40px;
   padding-right: 40px;
 }
 .content img {
-  width: 270px;
+  width: 200%;
 }
 
 .bottom-bar {
+  margin-top: 140px;
   width: 100%;
   height: 50%;
   display: flex;
   flex-direction: column;
   align-items: center;
   background-color: #fffcdd;
-  margin-top: 120px;
 }
 .bottom-bar div {
   padding: 30px 0px;
